--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,6 @@ iOSInjectionProject/
 
 # End of https://www.toptal.com/developers/gitignore/api/swift
 GoogleService-Info.plist
+*/GoogleService-Info.plist
+*GoogleService-Info.plist
+FinControl/GoogleService-Info.plist
